# sidekick

./: pyproject.toml
app/: main.py  sidekick.py
