[project]
name = "sidekick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-experimental>=0.4.1",
    "langgraph>=1.1.10",
    "openai>=2.34.0",
    "playwright>=1.59.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
]
